--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.1-13' %}
+{% set version = '1.1-14' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -12,19 +12,30 @@ source:
   url:
     - https://cran.r-project.org/src/contrib/lme4_{{ version }}.tar.gz
     - https://cran.r-project.org/src/contrib/Archive/lme4/lme4_{{ version }}.tar.gz
-  sha256: 5fa8b63d15882d153ee105d399b559dd942d97b2e6e7deae3802f41cc451448e
+  sha256: 8a9638ffbefe3341c700e8e885e49bb2006a1072c8056fbe9f07136046d259ed
+
+
+  # patches:
+   # List any patch files here
+   # - fix.patch
 
 build:
+  # If this is a new build for the same version, increment the build number.
   number: 0
-  skip: true  # [win32]
 
+  # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
+# Suggests: knitr, boot, PKPDmodels, MEMSS, testthat (>= 0.8.1), ggplot2, mlmRev, optimx (>= 2013.8.6), gamm4, pbkrtest, HSAUR2, numDeriv
 requirements:
   build:
     - r-base
+    - {{ compiler('cxx') }}      # [not win]
+    - {{native}}toolchain        # [win]
+    - {{posix}}filesystem        # [win]
+    - {{posix}}make
     - r-mass
     - r-matrix >=1.1.1
     - r-rcpp >=0.10.5
@@ -33,12 +44,10 @@ requirements:
     - r-minqa >=1.1.15
     - r-nlme >=3.1_123
     - r-nloptr >=1.0.4
-    - posix                # [win]
-    - {{native}}toolchain  # [win]
-    - gcc                  # [not win]
 
   run:
     - r-base
+    - {{native}}gcc-libs         # [win]
     - r-mass
     - r-matrix >=1.1.1
     - r-rcpp >=0.10.5
@@ -47,12 +56,18 @@ requirements:
     - r-minqa >=1.1.15
     - r-nlme >=3.1_123
     - r-nloptr >=1.0.4
-    - libgcc  # [not win]
 
 test:
   commands:
-    - $R -e "library('lme4')"  # [not win]
+    # You can put additional test commands to be run here.
+    - $R -e "library('lme4')"           # [not win]
     - "\"%R%\" -e \"library('lme4')\""  # [win]
+
+  # You can also put a file called run_test.py, run_test.sh, or run_test.bat
+  # in the recipe that will be run at test time.
+
+  # requires:
+    # Put any additional test requirements here.
 
 about:
   home: https://github.com/lme4/lme4/ http://lme4.r-forge.r-project.org/
@@ -67,3 +82,32 @@ extra:
   recipe-maintainers:
     - johanneskoester
     - bgruening
+    - mingwandroid
+
+# The original CRAN metadata for this package was:
+
+# Package: lme4
+# Version: 1.1-14
+# Title: Linear Mixed-Effects Models using 'Eigen' and S4
+# Authors@R: c(person("Douglas","Bates", role="aut"), person("Martin","Maechler", role="aut"), person("Ben","Bolker",email="bbolker+lme4@gmail.com", role=c("aut","cre")), person("Steven","Walker",role="aut"), person("Rune Haubo Bojesen","Christensen", role="ctb"), person("Henrik","Singmann", role="ctb"), person("Bin", "Dai", role="ctb"), person("Gabor", "Grothendieck", role="ctb"), person("Peter", "Green", role="ctb"))
+# Contact: LME4 Authors <lme4-authors@lists.r-forge.r-project.org>
+# Description: Fit linear and generalized linear mixed-effects models. The models and their components are represented using S4 classes and methods.  The core computational algorithms are implemented using the 'Eigen' C++ library for numerical linear algebra and 'RcppEigen' "glue".
+# Depends: R (>= 3.0.2), Matrix (>= 1.1.1), methods, stats
+# LinkingTo: Rcpp (>= 0.10.5), RcppEigen
+# Imports: graphics, grid, splines, utils, parallel, MASS, lattice, nlme (>= 3.1-123), minqa (>= 1.1.15), nloptr (>= 1.0.4)
+# Suggests: knitr, boot, PKPDmodels, MEMSS, testthat (>= 0.8.1), ggplot2, mlmRev, optimx (>= 2013.8.6), gamm4, pbkrtest, HSAUR2, numDeriv
+# VignetteBuilder: knitr
+# LazyData: yes
+# License: GPL (>= 2)
+# URL: https://github.com/lme4/lme4/ http://lme4.r-forge.r-project.org/
+# BugReports: https://github.com/lme4/lme4/issues
+# NeedsCompilation: yes
+# Packaged: 2017-09-20 02:40:54 UTC; bolker
+# Author: Douglas Bates [aut], Martin Maechler [aut], Ben Bolker [aut, cre], Steven Walker [aut], Rune Haubo Bojesen Christensen [ctb], Henrik Singmann [ctb], Bin Dai [ctb], Gabor Grothendieck [ctb], Peter Green [ctb]
+# Maintainer: Ben Bolker <bbolker+lme4@gmail.com>
+# Repository: CRAN
+# Date/Publication: 2017-09-27 08:28:13 UTC
+
+# See
+# http://docs.continuum.io/conda/build.html for
+# more information about meta.yaml
