--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.1-14' %}
+{% set version = '1.1-15' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -12,7 +12,7 @@ source:
   url:
     - https://cran.r-project.org/src/contrib/lme4_{{ version }}.tar.gz
     - https://cran.r-project.org/src/contrib/Archive/lme4/lme4_{{ version }}.tar.gz
-  sha256: 8a9638ffbefe3341c700e8e885e49bb2006a1072c8056fbe9f07136046d259ed
+  sha256: 7d9fd6309aae9cfa691236b3841a60f88ec70110faf2c1dabcbdff18e1ce8669
 
 
   # patches:
@@ -32,6 +32,7 @@ build:
 requirements:
   build:
     - r-base
+    - {{ compiler('c') }}        # [not win]
     - {{ compiler('cxx') }}      # [not win]
     - {{native}}toolchain        # [win]
     - {{posix}}filesystem        # [win]
@@ -87,9 +88,9 @@ extra:
 # The original CRAN metadata for this package was:
 
 # Package: lme4
-# Version: 1.1-14
+# Version: 1.1-15
 # Title: Linear Mixed-Effects Models using 'Eigen' and S4
-# Authors@R: c(person("Douglas","Bates", role="aut"), person("Martin","Maechler", role="aut"), person("Ben","Bolker",email="bbolker+lme4@gmail.com", role=c("aut","cre")), person("Steven","Walker",role="aut"), person("Rune Haubo Bojesen","Christensen", role="ctb"), person("Henrik","Singmann", role="ctb"), person("Bin", "Dai", role="ctb"), person("Gabor", "Grothendieck", role="ctb"), person("Peter", "Green", role="ctb"))
+# Authors@R: c(person("Douglas","Bates", role="aut"), person("Martin","Maechler", role="aut"), person("Ben","Bolker",email="bbolker+lme4@gmail.com", role=c("aut","cre")), person("Steven","Walker",role="aut"), person("Rune Haubo Bojesen","Christensen", role="ctb"), person("Henrik","Singmann", role="ctb"), person("Bin", "Dai", role="ctb"), person("Fabian", "Scheipl", role="ctb"), person("Gabor", "Grothendieck", role="ctb"), person("Peter", "Green", role="ctb"))
 # Contact: LME4 Authors <lme4-authors@lists.r-forge.r-project.org>
 # Description: Fit linear and generalized linear mixed-effects models. The models and their components are represented using S4 classes and methods.  The core computational algorithms are implemented using the 'Eigen' C++ library for numerical linear algebra and 'RcppEigen' "glue".
 # Depends: R (>= 3.0.2), Matrix (>= 1.1.1), methods, stats
@@ -101,12 +102,13 @@ extra:
 # License: GPL (>= 2)
 # URL: https://github.com/lme4/lme4/ http://lme4.r-forge.r-project.org/
 # BugReports: https://github.com/lme4/lme4/issues
+# Encoding: UTF-8
 # NeedsCompilation: yes
-# Packaged: 2017-09-20 02:40:54 UTC; bolker
-# Author: Douglas Bates [aut], Martin Maechler [aut], Ben Bolker [aut, cre], Steven Walker [aut], Rune Haubo Bojesen Christensen [ctb], Henrik Singmann [ctb], Bin Dai [ctb], Gabor Grothendieck [ctb], Peter Green [ctb]
+# Packaged: 2017-12-20 16:40:26 UTC; bolker
+# Author: Douglas Bates [aut], Martin Maechler [aut], Ben Bolker [aut, cre], Steven Walker [aut], Rune Haubo Bojesen Christensen [ctb], Henrik Singmann [ctb], Bin Dai [ctb], Fabian Scheipl [ctb], Gabor Grothendieck [ctb], Peter Green [ctb]
 # Maintainer: Ben Bolker <bbolker+lme4@gmail.com>
 # Repository: CRAN
-# Date/Publication: 2017-09-27 08:28:13 UTC
+# Date/Publication: 2017-12-21 21:29:24 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
