Updated recipe from CRAN to version 1.1-21

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.1-17' %}
+{% set version = '1.1-21' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -11,7 +11,7 @@ source:
   url:
     - {{ cran_mirror }}/src/contrib/lme4_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/lme4/lme4_{{ version }}.tar.gz
-  sha256: 3d11bcaea038ec26a221d17c574628ee335c3182e0df71b8a27a40a4836ffc33
+  sha256: 7f5554b69ff8ce9bac21e8842131ea940fb7a7dfa2de03684f236d3e3114b20c
 
 build:
   merge_build_host: True  # [win]
@@ -23,7 +23,7 @@ build:
     - lib/R/lib/
     - lib/
 
-# Suggests: knitr, boot, PKPDmodels, MEMSS, testthat (>= 0.8.1), ggplot2, mlmRev, optimx (>= 2013.8.6), gamm4, pbkrtest, HSAUR2, numDeriv
+# Suggests: knitr, rmarkdown, PKPDmodels, MEMSS, testthat (>= 0.8.1), ggplot2, mlmRev, optimx (>= 2013.8.6), gamm4, pbkrtest, HSAUR2, numDeriv, car, dfoptim
 requirements:
   build:
     - {{ compiler('c') }}        # [not win]
@@ -41,6 +41,7 @@ requirements:
     - r-matrix >=1.2_1
     - r-rcpp >=0.10.5
     - r-rcppeigen
+    - r-boot
     - r-lattice
     - r-minqa >=1.1.15
     - r-nlme >=3.1_123
@@ -53,6 +54,7 @@ requirements:
     - r-matrix >=1.2_1
     - r-rcpp >=0.10.5
     - r-rcppeigen
+    - r-boot
     - r-lattice
     - r-minqa >=1.1.15
     - r-nlme >=3.1_123
@@ -71,13 +73,14 @@ test:
     # Put any additional test requirements here.
 
 about:
-  home: https://github.com/lme4/lme4/ http://lme4.r-forge.r-project.org/
+  home: https://github.com/lme4/lme4/
   license: GPL (>= 2)
   summary: Fit linear and generalized linear mixed-effects models. The models and their components
     are represented using S4 classes and methods.  The core computational algorithms
     are implemented using the 'Eigen' C++ library for numerical linear algebra and 'RcppEigen'
     "glue".
   license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'
 
 extra:
   recipe-maintainers:
@@ -88,27 +91,27 @@ extra:
 # The original CRAN metadata for this package was:
 
 # Package: lme4
-# Version: 1.1-17
+# Version: 1.1-21
 # Title: Linear Mixed-Effects Models using 'Eigen' and S4
-# Authors@R: c(person("Douglas","Bates", role="aut"), person("Martin","Maechler", role="aut"), person("Ben","Bolker",email="bbolker+lme4@gmail.com", role=c("aut","cre")), person("Steven","Walker",role="aut"), person("Rune Haubo Bojesen","Christensen", role="ctb"), person("Henrik","Singmann", role="ctb"), person("Bin", "Dai", role="ctb"), person("Fabian", "Scheipl", role="ctb"), person("Gabor", "Grothendieck", role="ctb"), person("Peter", "Green", role="ctb"))
+# Authors@R: c( person("Douglas","Bates", role="aut", comment=c(ORCID="0000-0001-8316-9503")), person("Martin","Maechler", role="aut", comment=c(ORCID="0000-0002-8685-9910")), person("Ben","Bolker",email="bbolker+lme4@gmail.com", role=c("aut","cre"), comment=c(ORCID="0000-0002-2127-0443")), person("Steven","Walker",role="aut", comment=c(ORCID="0000-0002-4394-9078")), person("Rune Haubo Bojesen","Christensen", role="ctb", comment=c(ORCID="0000-0002-4494-3399")), person("Henrik","Singmann", role="ctb", comment=c(ORCID="0000-0002-4842-3657")), person("Bin", "Dai", role="ctb"), person("Fabian", "Scheipl", role="ctb", comment=c(ORCID="0000-0001-8172-3603")), person("Gabor", "Grothendieck", role="ctb"), person("Peter", "Green", role="ctb", comment=c(ORCID="0000-0002-0238-9852")), person("John", "Fox", role="ctb") )
 # Contact: LME4 Authors <lme4-authors@lists.r-forge.r-project.org>
 # Description: Fit linear and generalized linear mixed-effects models. The models and their components are represented using S4 classes and methods.  The core computational algorithms are implemented using the 'Eigen' C++ library for numerical linear algebra and 'RcppEigen' "glue".
 # Depends: R (>= 3.2.0), Matrix (>= 1.2-1), methods, stats
 # LinkingTo: Rcpp (>= 0.10.5), RcppEigen
-# Imports: graphics, grid, splines, utils, parallel, MASS, lattice, nlme (>= 3.1-123), minqa (>= 1.1.15), nloptr (>= 1.0.4)
-# Suggests: knitr, boot, PKPDmodels, MEMSS, testthat (>= 0.8.1), ggplot2, mlmRev, optimx (>= 2013.8.6), gamm4, pbkrtest, HSAUR2, numDeriv
+# Imports: graphics, grid, splines, utils, parallel, MASS, lattice, boot, nlme (>= 3.1-123), minqa (>= 1.1.15), nloptr (>= 1.0.4)
+# Suggests: knitr, rmarkdown, PKPDmodels, MEMSS, testthat (>= 0.8.1), ggplot2, mlmRev, optimx (>= 2013.8.6), gamm4, pbkrtest, HSAUR2, numDeriv, car, dfoptim
 # VignetteBuilder: knitr
 # LazyData: yes
 # License: GPL (>= 2)
-# URL: https://github.com/lme4/lme4/ http://lme4.r-forge.r-project.org/
+# URL: https://github.com/lme4/lme4/
 # BugReports: https://github.com/lme4/lme4/issues
 # Encoding: UTF-8
 # NeedsCompilation: yes
-# Packaged: 2018-04-03 13:17:19 UTC; bolker
-# Author: Douglas Bates [aut], Martin Maechler [aut], Ben Bolker [aut, cre], Steven Walker [aut], Rune Haubo Bojesen Christensen [ctb], Henrik Singmann [ctb], Bin Dai [ctb], Fabian Scheipl [ctb], Gabor Grothendieck [ctb], Peter Green [ctb]
+# Packaged: 2019-03-05 17:34:33 UTC; bolker
+# Author: Douglas Bates [aut] (<https://orcid.org/0000-0001-8316-9503>), Martin Maechler [aut] (<https://orcid.org/0000-0002-8685-9910>), Ben Bolker [aut, cre] (<https://orcid.org/0000-0002-2127-0443>), Steven Walker [aut] (<https://orcid.org/0000-0002-4394-9078>), Rune Haubo Bojesen Christensen [ctb] (<https://orcid.org/0000-0002-4494-3399>), Henrik Singmann [ctb] (<https://orcid.org/0000-0002-4842-3657>), Bin Dai [ctb], Fabian Scheipl [ctb] (<https://orcid.org/0000-0001-8172-3603>), Gabor Grothendieck [ctb], Peter Green [ctb] (<https://orcid.org/0000-0002-0238-9852>), John Fox [ctb]
 # Maintainer: Ben Bolker <bbolker+lme4@gmail.com>
 # Repository: CRAN
-# Date/Publication: 2018-04-03 21:41:32 UTC
+# Date/Publication: 2019-03-05 22:40:10 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
